Game class written
Unit tests are being weird. But it seems the class itself works.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	</head>
-		<script src="game.js"></script>
-		<script src="unittests.js"></script>
+		<script type="text/javascript" src ="game.js"></script>
+		<script type="text/javascript" src ="unit-tests.js"></script>
 	</head>
 	<title>Bowling Game Kata</title>
 
