--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
 		<script type="text/javascript" src ="unit-tests.js"></script>
 	</head>
 	<title>Bowling Game Kata</title>
+	<body>
+		Check the console
+	</body>
 
 </html>
